# wicafe

./: .gitignore  README.md  main.py  setup.cfg
.github/workflows/: release.yml  style-check.yml  test-release.yml
wicafe/: __main__.py
