[metadata]
name = wicafe
version = attr: wicafe.__version__
description = Automatic login utility of free Wi-Fi captive portals
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = puhitaku
author_email = puhitaku@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    requests
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    wicafe = wicafe.__main__:main

[options.extras_require]
dev =
    black>=21.12b0
    flake8>=4.0.1
    isort>=5.10.1
    mypy>=0.931
    types-requests>=2.27.7
    types-setuptools>=57.4.7

[isort]
profile = black

[flake8]
# ignore =
indent-size = 4

[mypy]
python_version = 3.7
show_error_codes = True
strict = True
pretty = True
